# bradford_bull_v2

./: .gitignore  Bradford_Bulls_Frame_Miner.ipynb  Bradford_Bulls_Frame_Selector.ipynb  Bradford_Bulls_Logo_Exposure_Colab.ipynb  Bradford_Bulls_MVP_Phase1.ipynb  Bradford_Bulls_Standalone_V3.ipynb  LOGOS_Exposure_Pricing_Algorithm.md  Motion-blur.MD  Production-System-Design.MD  README.md  Sponsor_Exposure_Colab_GPU.ipynb  TESTING_GUIDE.md  bradford_bulls_logo_exposure.py  pyproject.toml
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: routes_analyses.py  routes_health.py  routes_jobs.py  schemas.py
backend/app/db/: base.py  models.py  repository.py
backend/app/jobs/: __init__.py  base.py  inprocess.py
backend/app/models_zoo/: registry.py
backend/app/pipeline/: aggregate.py  annotate.py  av.py  bodyseg.py  bodyseg_yolo.py  bodyzones.py  colors.py  datatypes.py  detect_track.py  exposure.py  frames.py  ingest.py  orchestrator.py  pose.py  pricing.py  timeline.py  visibility.py
backend/app/pipeline/teamid/: __init__.py  bootstrap.py  classifier.py  features.py  jersey.py  tracker.py
backend/app/storage/: __init__.py  base.py  local.py
backend/scripts/: build_team_refs.py  make_kit_anchors.py
backend/tests/: conftest.py  test_api.py  test_av.py  test_bodyzones.py  test_exposure.py  test_pricing.py  test_teamid.py  test_visibility.py
docs/: 01-overview.md  02-setup.md  03-pipeline.md  04-team-filter.md  05-exposure-emv.md  06-dashboard.md  07-api.md  08-annotation-training.md  09-operations.md  PLAN.md  README.md  SOLUTION_ARCHITECTURE_V4.md  SOLUTION_ARCHITECTURE_V5.md  V5_DEEP_DIVE.md  V5_QA_EDGECASES.md  V5_QA_PRODUCTION_OPS.md  (+1 more)
(+86 files in other folders)
